--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
 						<div class="row form-group">
 							<div class="col-md-12">
 								<!-- <label for="message">Message</label> -->
-								<textarea  name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Cuéntanos cómo podemos ayudarte"></textarea>
+								<textarea  name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Cuéntanos cOmo podemos ayudarte"></textarea>
 							</div>
 						</div>
 						<div class="form-group">
@@ -150,7 +150,7 @@
 		</div>
 	</div>
 	
-        <iframe  class="MAPA" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.0632301035553!2d2.1892873155605237!3d41.394433179263714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a31bcb933dfd%3A0xb3881ad2f5bc7632!2sAlga%20Studio!5e0!3m2!1sca!2ses!4v1636116273793!5m2!1sca!2ses"  ></iframe>
+        <iframe  class="MAPA" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.0632301035553!2d2.1892873155605237!3d41.394433179263714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a31bcb933dfd%3A0xb3881ad2f5bc7632!2sAlga%20Studio!5e0!3m2!1sca!2ses!4v1636116273793!5m2!1sca!2ses"loading="lazy"  ></iframe>
 	 
 	
 	<!-- jQuery -->
