--- a/work2.html
+++ b/work2.html
@@ -80,17 +80,17 @@
 	<div id="gallery">
   
 
-	<div class="tiles"><a class="tile" href="#"><img src="images//Imagen54-baja-web-768x1152.jpeg"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images//Imagen54-baja-web-768x1152.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Alga-Studio-3-OPT-.jpeg"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Alga-Studio-3-OPT-.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen5-baja-web-1843x2048.jpeg"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen5-baja-web-1843x2048.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen37-baja-web-768x1024.jpeg"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen37-baja-web-768x1024.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen44-baja-web-768x1075.jpeg"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen44-baja-web-768x1075.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen8-baja-web-1843x2048.jpeg"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen8-baja-web-1843x2048.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
 
 	</div>	
