--- a/work.html
+++ b/work.html
@@ -84,23 +84,18 @@
 
 	<div id="gallery">
   
-   <div class="tiles"><a class="tile" href="#"><img src="images/Alga-Studio-2-OPT-.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">Alga Studio 2019</span><span class="info">Imagen para Georg Kayser, Egipto </span></div></a></div>
-   <div class="tiles"><a class="tile" href="#"><img src="images/Imagen42-baja-web-768x1097.jpeg"loading="lazy"/>
+   <div class="tiles"><a class="tile" href="#"><img src="images/Imagen29-baja-web-1024x1078.jpeg"loading="lazy"/>
+    <div class="details"><span class="title">Alga Studio 2018</span><span class="info">10 Moreton Place </span></div></a></div>
+   <div class="tiles"><a class="tile" href="#"><img src="images/"loading="lazy"/>
+    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+	
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen1-baja-web-1638x2048j.jpeg"loading="lazy"/>
+    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+	<div class="tiles"><a class="tile" href="#"><img src="/images/"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen50-baja-web-768x960.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen12-baja-web-768x549.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen1-baja-web-1638x2048j.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/hme.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen15-baja-web-768x1022.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-    <div class="tiles"><a class="tile" href="#"><img src="images/Imagen20-baja-web-1280x766.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen29-baja-web-768x808.jpeg"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images//Imagen19-baja-web-1280x753.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
   
 	</div>
