--- a/work2.html
+++ b/work2.html
@@ -80,7 +80,7 @@
 	<div id="gallery">
   
 
-	<div class="tiles"><a class="tile" href="#"><img src="images//Imagen54-baja-web-768x1152.jpeg"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Alga-Studio-3-OPT-.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
@@ -102,7 +102,7 @@
   <a href="/work.html">&laquo;</a>
   <a href="/work.html">1</a>
   <a href="/work2.html"class="active">2</a>
-  <a href="#">3</a>
+  <a href="/work3.html">3</a>
   
   <a href="#">&raquo;</a>
   </div>
