changes work page

--- a/work.html
+++ b/work.html
@@ -84,30 +84,30 @@
 
 	<div id="gallery">
   
-   <div class="tiles"><a class="tile" href="#"><img src="images/Imagen29-baja-web-1024x1078.jpeg"loading="lazy"/>
+   <div class="tiles"><a class="tile" href="#"><img src="images/CIRCULAR-BIBLIOTECA-min.jpg"loading="lazy"/>
     <div class="details"><span class="title">Alga Studio 2018</span><span class="info">10 Moreton Place </span></div></a></div>
-   <div class="tiles"><a class="tile" href="#"><img src="images/"loading="lazy"/>
+   <div class="tiles"><a class="tile" href="#"><img src="images/Escena 2_ imatge final-min.jpg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
 	
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen1-baja-web-1638x2048j.jpeg"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Escena 4_ imagen final-min.jpg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="/images/"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen50-baja-web-768x960.jpeg"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Escena 6_ imatge final.jpg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images//Imagen19-baja-web-1280x753.jpeg"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen1-baja-web-1638x2048.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
   
 	</div>
 	
 	<div class="centro" >
   <div class="pagination">
-  <a href="/work.html">&laquo;</a>
+  
   <a href="/work.html" class="active">1</a>
   <a href="/work2.html">2</a>
   <a href="/work3.html">3</a>
   
-  <a href="/work3.html">&raquo;</a>
+  <a href="/work2.html">&raquo;</a>
   </div>
 </div>
 
