--- a/work2.html
+++ b/work2.html
@@ -80,17 +80,17 @@
 	<div id="gallery">
   
 
-	<div class="tiles"><a class="tile" href="#"><img src="images/"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen12-baja-web-768x549.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Alga-Studio-3-OPT-.jpeg"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen15-baja-web-768x1022.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen5-baja-web-1843x2048.jpeg"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen19-baja-web-1280x753.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen37-baja-web-768x1024.jpeg"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen24-baja-web-1280x905.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen44-baja-web-768x1075.jpeg"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen29-baja-web-1024x1078.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen8-baja-web-1843x2048.jpeg"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen35-baja-web-768x1264.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
 
 	</div>	
@@ -104,7 +104,7 @@
   <a href="/work2.html"class="active">2</a>
   <a href="/work3.html">3</a>
   
-  <a href="#">&raquo;</a>
+  <a href="/work3.html">&raquo;</a>
   </div>
 </div>
 
