--- a/work3.html
+++ b/work3.html
@@ -80,29 +80,29 @@
 	<div id="gallery">
   
 
-	<div class="tiles"><a class="tile" href="#"><img src="images/CIRCULAR-BIBLIOTECA.jpg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Escena 2_ imatge final-min.jpg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Escena 4_ imagen final-min.jpg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Escena 6_ imatge final.jpg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen19-baja-web-1280x753.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen24-baja-web-1280x905.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-    <div class="tiles"><a class="tile" href="#"><img src="images/Imagen35-baja-web-768x1264.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen36-baja-web-768x854.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen50-baja-web-768x960.jpeg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/RENDER 14_ bathroom1.jpg"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen52-baja-web-768x960.jpeg"loading="lazy"/>
+    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen8-baja-web-1843x2048.jpeg"loading="lazy"/>
+    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Prueba04_03.jpg"loading="lazy"/>
+    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Render 12_ Molecula -min.jpg"loading="lazy"/>
+    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="tiles"><a class="tile" href="#"><img src="images/RENDER 14_ bathroom1.jpg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/RENDER 15_ bathroom2.jpg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/V4-Oficina.jpg"loading="lazy"/>
+	<div class="tiles"><a class="tile" href="#"><img src="images/RENDER 16_bathroom3.jpg" loading="lazy"/>
+    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+	<div class="tiles"><a class="tile" href="#"><img src="images/render final-vista 002.jpg"lazy"/>
+    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+	<div class="tiles"><a class="tile" href="#"><img src="images/RENDER FINAL.jpg"loading="lazy"/>
+    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Render03_Aridi-LifeStyle.jpg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
     <div class="tiles"><a class="tile" href="#"><img src="images/Render01_mydrap.jpg"loading="lazy"/>
     <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
@@ -113,12 +113,12 @@
 
   <div class="centro" >
   <div class="pagination">
-  <a href="/work.html">&laquo;</a>
+  <a href="/work2.html">&laquo;</a>
   <a href="/work.html">1</a>
   <a href="/work2.html">2</a>
   <a href="/work3.html"class="active">3</a>
   
-  <a href="#">&raquo;</a>
+  
   </div>
 </div>
 
