--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
         </ul>
     </nav>
 
+	
 
 	<body>
 
+		
 
  
   </div>
@@ -201,6 +203,10 @@
                  <div class="col-lg-4 col-sm-6" style="padding-top:0%;  ">
                     <div class="thumbnail"style="border-color:transparent" >
                         <img src="/images/image (2).png">
+
+						
+							<a href="work.html"  style= " width: 50% !important; height:50px;cursor:pointer!important;margin-top:0; margin-left:25%;background-color: rgb(85, 100, 77);border-radius: 18px; border-color: transparent; font-weight: 500; "type="button"  class="btn btn-primary" > <h5>DESCUBRIR</h5> </a>
+						
                 </div>
 
            </div>
