--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-	<link  rel="icon"   href="images/image (2).png" type="image/png" />	
+	<link  rel="icon"   href="/images/A.ico" />	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Alga Studio - Home </title>
