--- a/contact.html
+++ b/contact.html
@@ -100,6 +100,7 @@
 							<li class="address">C/ de Pujades,  <br> 60, 5º-1ª. 08005 Barcelona</li>
 							<li class="phone"><a href="tel://605 56 69 76">+34 605 56 69 76 / <br> +34 666 57 75 05 <br> Inglés: +34 657 08 02 63</a></li>
 							<li class="email"><a href="mailto:info@algastudio.com">info@algastudio.com</a></li>
+							<li class="icon-instagram"><a href="https://www.instagram.com/algastudio/">@algastudio</a></li>
 							
 						</ul>
 					</div>
@@ -136,7 +137,7 @@
 						<div class="row form-group">
 							<div class="col-md-12">
 								<!-- <label for="message">Message</label> -->
-								<textarea  name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Cuéntanos cOmo podemos ayudarte"></textarea>
+								<textarea  name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Cuéntanos como podemos ayudarte"></textarea>
 							</div>
 						</div>
 						<div class="form-group">
