new brand portfolio studio

--- a/work.html
+++ b/work.html
@@ -64,7 +64,7 @@
         <span class="navbar-toggle" id="js-navbar-toggle">
             <i class="fas fa-bars"></i>
         </span>
-        <a href="/index.html" class="logo">ALGA STUDIO</a>
+        <a href="/index.html" class="logo">PORTFOLIO STUDIO</a>
         <ul class="main-nav" id="js-menu">
             <li>
                 <a href="/about.html" class="nav-links">ABOUT</a>
@@ -85,18 +85,18 @@
 	<div id="gallery">
   
    <div class="tiles"><a class="tile" href="#"><img src="images/CIRCULAR-BIBLIOTECA-min.jpg"loading="lazy"/>
-    <div class="details"><span class="title">Alga Studio 2018</span><span class="info">10 Moreton Place </span></div></a></div>
+    <div class="details"><span class="title">Egipt</span><span class="info">November 2018</span></div></a></div>
    <div class="tiles"><a class="tile" href="#"><img src="images/Escena 2_ imatge final-min.jpg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">Champagne</span><span class="info">November 2018</span></div></a></div>
 	
 	<div class="tiles"><a class="tile" href="#"><img src="images/Escena 4_ imagen final-min.jpg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="/images/"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">Champagne</span><span class="info">November 2018</span></div></a></div>
+	<div class="tiles"><a class="tile" href="#"><img src="/images/Render10_Aridi-LifeStyle.jpeg"loading="lazy"/>
+    <div class="details"><span class="title">Queixans</span><span class="info">October 2021</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Escena 6_ imatge final.jpg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">Tunisia</span><span class="info">October 2021</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen1-baja-web-1638x2048.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">Lorem Ipsum Dolor</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">Tunisia</span><span class="info">October 2021</span></div></a></div>
   
 	</div>
 	
