--- a/work3.html
+++ b/work3.html
@@ -62,7 +62,7 @@
         <span class="navbar-toggle" id="js-navbar-toggle">
             <i class="fas fa-bars"></i>
         </span>
-        <a href="/index.html" class="logo">ALGA STUDIO</a>
+        <a href="/index.html" class="logo">PORTFOLIO STUDIO</a>
         <ul class="main-nav" id="js-menu">
             <li>
                 <a href="/about.html" class="nav-links">ABOUT</a>
