--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<link  rel="icon"   href="/" />	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Alga Studio - Home </title>
+	<title>Portfolio Studio - Home </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Alga Studio" />
-	<meta name="keywords" content="Estudio de deiseño de interiores en Barcelona" />
+	<meta name="description" content="All images are made by Alga Studio " />
+	<meta name="keywords" content="Interior desing portfolio" />
 	<meta name="author" content="Nina Baldó Rousseau" />
 
 
