--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Alga Studio - Contact</title>
+	<title>Portfolio Studio - Contact</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -12,16 +12,7 @@
 	<!-- 
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
+	
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -97,10 +88,11 @@
 					<div class="fh5co-contact-info">
 						<h3>Contact information</h3>
 						<ul>
-							<li class="address">C/ de Balmes,  <br> 135, Ático. 08005 Barcelona</li>
+							<li class="address">Empire State Building<br>
+                                                New York 10001,<br> USA</li>
 							<li class="phone"><a href="tel://605 56 69 76">+34 666 66 66 / <br> +33 666 66 66 </a></li>
 							<li class="email"><a href="">info@portfoliostudio.com</a></li>
-							<li class="icon-instagram"><a href=""></a></li>
+							
 							
 						</ul>
 					</div>
