--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             </div >
                  <div class="col-lg-4 col-sm-6" style="padding-top:0%;  ">
                     <div class="thumbnail"style="border-color:transparent" >
-                        <img src="/images/logo/Beige Interior Designer Logo.png">
+                        <img src="/images/Beige Interior Designer Logo copie.png">
 
 						
 							<a href="work.html"  style= " width: 50% !important; height:50px;cursor:pointer!important;margin-top:0; margin-left:25%;background-color: #69947B;border-radius: 18px; border-color: transparent; font-weight: 500; "type="button"  class="btn btn-primary" > <h5>DISCOVER</h5> </a>
