--- a/work.html
+++ b/work.html
@@ -85,18 +85,18 @@
 	<div id="gallery">
   
    <div class="tiles"><a class="tile" href="#"><img src="images/CIRCULAR-BIBLIOTECA-min.jpg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info"> </span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Grok</span></div></a></div>
    <div class="tiles"><a class="tile" href="#"><img src="images/Escena 2_ imatge final-min.jpg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">November 2018</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Honext</span></div></a></div>
 	
 	<div class="tiles"><a class="tile" href="#"><img src="images/Escena 4_ imagen final-min.jpg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">November 2018</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Honex</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="/images/Render10_Aridi-LifeStyle.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">October 2021</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Escena 6_ imatge final.jpg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">October 2021</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Aridi</span></div></a></div>
+	<div class="tiles"><a class="tile" href="#"><img src="images/V4-Oficina.jpg"loading="lazy"/>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Aridi</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen1-baja-web-1638x2048.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">October 2021</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Honext, Design home in Girona</span></div></a></div>
   
 	</div>
 	
