--- a/work2.html
+++ b/work2.html
@@ -81,17 +81,17 @@
   
 
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen12-baja-web-768x549.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Andrew Trotter</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen15-baja-web-768x1022.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Andrew Trotter</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen19-baja-web-1280x753.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Andrew Trotter</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen24-baja-web-1280x905.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Mdhouse</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen29-baja-web-1024x1078.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Burgbad</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen35-baja-web-768x1264.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Aridi</span></div></a></div>
 
 	</div>	
    
