--- a/work3.html
+++ b/work3.html
@@ -81,31 +81,22 @@
   
 
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen36-baja-web-768x854.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Grok</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen50-baja-web-768x960.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Kayser Studio</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen52-baja-web-768x960.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Proyecto en tenerife</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen8-baja-web-1843x2048.jpeg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Prueba04_03.jpg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/Render 12_ Molecula -min.jpg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-    <div class="tiles"><a class="tile" href="#"><img src="images/RENDER 14_ bathroom1.jpg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/RENDER 15_ bathroom2.jpg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/RENDER 16_bathroom3.jpg" loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
-	<div class="tiles"><a class="tile" href="#"><img src="images/render final-vista 002.jpg"lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Diseño de proyecto vivienda en Lanzarote</span></div></a></div>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Imagen29-baja-web-768x808.jpeg"loading="lazy"/>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Aridi</span></div></a></div>
+	<div class="tiles"><a class="tile" href="#"><img src="images/Render08_Aridi-LifeStyle.jpeg"loading="lazy"/>
 	<div class="tiles"><a class="tile" href="#"><img src="images/RENDER FINAL.jpg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Leland</span></div></a></div>
 	<div class="tiles"><a class="tile" href="#"><img src="images/Render03_Aridi-LifeStyle.jpg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">Aridi</span></div></a></div>
     <div class="tiles"><a class="tile" href="#"><img src="images/Render01_mydrap.jpg"loading="lazy"/>
-    <div class="details"><span class="title">© Alga Studio</span><span class="info">Quisque vel felis lectus donec vitae dapibus magna</span></div></a></div>
+    <div class="details"><span class="title">© Alga Studio</span><span class="info">My draft prof</span></div></a></div>
 
 	</div>	
    
